<resources>
    <string name="app_name">MyApp</string>
    <string name="email">email</string>
    <string name="password" >password</string>
    <string name="sign_up">sign_up</string>
    <string name="create_new_account">create_new_account </string>
    <string name="confirm_password" >confirm_password</string>
    <string name="FullName">FullName</string>
    <string name="already_registered_login_here">already_registered_login_here </string>
    <string name="register" />
    <string name="login">login</string>
    <string name="Click">Register</string>
    <string name="hello">Hello</string>
</resources>