<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registering">

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:barrierDirection="left"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="241dp"
        android:layout_height="74dp"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up"
        android:textColor="#503D43"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="215dp"
        android:layout_height="29dp"
        android:text="@string/create_new_account"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="148dp" />

    <EditText
        android:id="@+id/FullName"
        android:layout_width="342dp"
        android:layout_height="52dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/FullName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="225dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="344dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="323dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="419dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="352dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="numberPassword"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="512dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/Register"
        android:layout_width="381dp"
        android:layout_height="42dp"
        android:backgroundTintMode="src_atop"
        android:text="@string/Click"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="589dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="222dp"
        android:layout_height="26dp"
        android:text="@string/already_registered_login_here"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="631dp" />
</androidx.constraintlayout.widget.ConstraintLayout>